# mcpstack-autoddg

./: README.md  pyproject.toml
.github/workflows/: publish.yaml
scripts/scaffold/: pyproject.toml
src/mcpstack_autoddg/: __init__.py
